--- a/assets/css/style-mobile.css
+++ b/assets/css/style-mobile.css
@@ -1,105 +1,116 @@
 @font-face {
-    font-family: OpenSans-Light;
-    src: url('assets/fonts/OpenSans-Light.ttf');
-  }
-  @font-face {
-    font-family: OpenSans-Regular;
-    src: url('assets/fonts/OpenSans-Regular.ttf');
-  }
+	font-family: OpenSans-Light;
+	src: url('assets/fonts/OpenSans-Light.ttf');
+}
+
+@font-face {
+	font-family: OpenSans-Regular;
+	src: url('assets/fonts/OpenSans-Regular.ttf');
+}
+
 
 /* Escondendo itens do desktop */
-  @media (max-width: 640px) {
-    .section1 , .section3, 
-    #menu {
-      display: none;
-    }
-  }
 
-  @media (min-width: 640px) {
-    .section3
-   
-   {
-          display: none;
-      }
-  }
-  
-
-  html {
-    font-family: 'Open Sans', sans-serif;;
-    font-weight: 300;
-    line-height: 1.2;
+@media (max-width: 640px) {
+	.section1,
+	.section3,
+	#menu {
+		display: none;
+	}
 }
 
-body{
-    margin: 0%;
-    font-family: 'Open Sans', sans-serif;;
-    font-weight: 300;
-
+@media (min-width: 640px) {
+	.section3 {
+		display: none;
+	}
 }
+
+html {
+	font-family: 'Open Sans', sans-serif;
+	;
+	font-weight: 300;
+	line-height: 1.2;
+}
+
+body {
+	margin: 0%;
+	font-family: 'Open Sans', sans-serif;
+	;
+	font-weight: 300;
+}
+
 
 /* Menu */
-  
+
 .topnav {
-    overflow: hidden;
-    background-color:rgb(145, 145, 145);
+	overflow: hidden;
+	background-color: rgb(145, 145, 145);
+}
 
-  }
-  
-  .topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
+.topnav a {
+	float: left;
+	display: block;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+
+@media screen and (max-width: 600px) {
+	.topnav a:not(:first-child) {
+		display: none;
+	}
+	.topnav a.icon {
+		float: right;
+		display: block;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.topnav.responsive {
+		position: relative;
+	}
+	.topnav.responsive .icon {
+		position: absolute;
+		right: 0;
+		top: 0;
+	}
+	.topnav.responsive a {
+		float: none;
+		display: block;
+		text-align: left;
+	}
+}
 
 
-  
-  @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
-  }
-  
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-  }
 /* Logo */
+
 #logo {
-    width: 90px;
-       
+	width: 90px;
 }
+
+
 /* Banner  */
+
 .section2 {
-    background-color: #ffffff;
-    width: 100%;
+	background-color: #ffffff;
+	width: 100%;
 }
+
 #texto {
-    position: absolute;
-    margin-top: -130px;
-    color:  white;
-    font-family: ;
+	position: absolute;
+	margin-top: -130px;
+	color: white;
+	font-family: ;
 	font-size: 12px;
-	font-family:'Open Sans', sans-serif;
-    line-height: 1.2;
-    }
+	font-family: 'Open Sans', sans-serif;
+	line-height: 1.2;
+}
+
 
 /* Itens  */
+
 .flex-container {
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -108,8 +119,8 @@ body{
 	flex-wrap: wrap;
 	-webkit-box-pack: center;
 	-ms-flex-pack: center;
-	justify-content: center;F
-	-webkit-box-align: baseline;
+	justify-content: center;
+	F -webkit-box-align: baseline;
 	-ms-flex-align: baseline;
 	align-items: baseline;
 	-ms-flex-line-pack: center;
@@ -137,54 +148,54 @@ body{
 	-ms-flex-direction: column;
 	flex-direction: column;
 	padding: 38px;
-    text-align: center;
-    margin: 10px;
+	text-align: center;
+	margin: 10px;
 }
 
-.icon {width: 110px;}
+.icon {
+	width: 110px;
+}
+
 .maior {
 	color: #272626;
 	font-size: 17px;
 	font-weight: 500;
 	font-family: 'Sa';
-    line-height: 1.7;
-    font-family: 'OpenSans-Regular';
+	line-height: 1.7;
+	font-family: 'OpenSans-Regular';
 }
 
 #icone {
-    width: 20px;
-    float: right;
-    margin: 0%;
-    padding: 0%;
-    
+	width: 20px;
+	float: right;
+	margin: 0%;
+	padding: 0%;
 }
+
 .menor {
 	color: #707070;
 	font-size: 14px;
 	font-weight: 200;
-	font-family: 'Open Sans', sans-serif;;
+	font-family: 'Open Sans', sans-serif;
+	;
 	line-height: 1.7;
 }
+
 .item {
-    color: white;
-
+	color: white;
 }
-
 
 
 /* Rodapé */
+
 footer {
-    width: 100%;
+	width: 100%;
 	background-color: #f5f5dc;
-    color: #707070;
+	color: #707070;
 	font-size: 14px;
 	font-weight: 300;
-	font-family: 'Open Sans', sans-serif;;
-    line-height: 1.7;
-    text-align: center;
+	font-family: 'Open Sans', sans-serif;
+	;
+	line-height: 1.7;
+	text-align: center;
 }
-
-
-   
-
-
